<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.main.MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:layout_gravity="top"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_own_label" />

                <EditText
                    android:id="@+id/edit_xrb_amount"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xrb" />

            </LinearLayout>

            <include layout="@layout/owned_xrb"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:padding="24dp" />

            <include layout="@layout/high_last_low" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                style="@style/center_textview_style"
                android:text="@string/powered_by"
                android:textColor="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/coindesk_logo"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/coindesk_logo"
                    android:scaleType="centerInside"
                    android:src="@drawable/coindesk" />

                <ImageView
                    android:id="@+id/bitgrail_logo"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/bitgrail_logo"
                    android:scaleType="centerInside"
                    android:src="@drawable/bitgrail" />
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/full_screen_progress" />

    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="@color/colorPrimaryDark" />
</android.support.v4.widget.DrawerLayout>